Feat: Added Background Colour on Container

--- a/index.html
+++ b/index.html
@@ -21,35 +21,45 @@
         color: #007bff;
         text-decoration: none;
       }
+      div {
+        background-color: #aae5f4;
+        border-radius: 5px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        max-width: 600px;
+        margin: auto;
+      }
     </style>
   </head>
   <body>
-    <h1>Github and Version Control</h1>
-    <p>
-      Github is a web-based platform that uses Git for version control. It
-      allows developers to collaborate on projects, track changes, and manage
-      code repositories.
-    </p>
-    <p>
-      Version control is a system that records changes to files over time so
-      that you can recall specific versions later. It is essential for
-      collaborative software development.
-    </p>
-    <p>
-      For more information, visit the
-      <a href="https://github.com" target="_blank">Github website</a>.
-    </p>
-    <p>
-      To learn more about version control, check out the
-      <a href="https://git-scm.com/" target="_blank">Git documentation</a>.
-    </p>
-    <p>
-      For a comprehensive guide on using Git and Github, refer to the
-      <a
-        href="https://guides.github.com/introduction/git-handbook/"
-        target="_blank"
-        >Git Handbook</a
-      >.
-    </p>
+    <div>
+      <h1>Github and Version Control</h1>
+      <p>
+        Github is a web-based platform that uses Git for version control. It
+        allows developers to collaborate on projects, track changes, and manage
+        code repositories.
+      </p>
+      <p>
+        Version control is a system that records changes to files over time so
+        that you can recall specific versions later. It is essential for
+        collaborative software development.
+      </p>
+      <p>
+        For more information, visit the
+        <a href="https://github.com" target="_blank">Github website</a>.
+      </p>
+      <p>
+        To learn more about version control, check out the
+        <a href="https://git-scm.com/" target="_blank">Git documentation</a>.
+      </p>
+      <p>
+        For a comprehensive guide on using Git and Github, refer to the
+        <a
+          href="https://guides.github.com/introduction/git-handbook/"
+          target="_blank"
+          >Git Handbook</a
+        >.
+      </p>
+    </div>
   </body>
 </html>
